Statisk data forvalter/kode rydding (#2522)
Ryddet og forenklet kode