@@ -14,7 +14,6 @@ import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -40,7 +39,7 @@ public class PersonFasteDataConsumer {
     public void opprett(TpsIdentListe tpsIdentListe) {
         tokenExchange.exchange(serverProperties)
                 .flatMapMany(token -> Flux.concat(
-                        tpsIdentListe.getListe().stream().map(value -> opprett(value, token)).collect(Collectors.toList())
+                        tpsIdentListe.getListe().stream().map(value -> opprett(value, token)).toList()
                 ))
                 .collectList()
                 .block();
