@@ -13,7 +13,6 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -49,7 +48,7 @@ public class IdentService {
         TpsIdentListe identer = new TpsIdentListe(liste
                 .stream()
                 .filter(item -> !exisistingFnrs.contains(item.getFnr()))
-                .collect(Collectors.toList())
+                .toList()
         );
 //        skdConsumer.createTpsIdenterMessagesInGroup(identer, staticDataPlaygroup);
         skdConsumer.send(staticDataPlaygroup, environment);
@@ -96,7 +95,7 @@ public class IdentService {
             } else {
                 return ident;
             }
-        }).collect(Collectors.toList());
+        }).toList();
         return new TpsIdentListe(tpsIdentListe);
     }
 }
